# server-monitor

./: README.md  pyproject.toml
server_monitor/: __init__.py  core.py
